[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Menu_Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Levels/Level_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/batmfa__.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_char = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
extra_spacing_char = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_char = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 65
extra_spacing_char = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
position = Vector2( 474.705, 23.327 )
script = ExtResource( 1 )
Level_1 = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -51.0
margin_right = 51.0
margin_bottom = -473.0
custom_fonts/font = SubResource( 1 )
text = "the"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -163.153
margin_top = 24.4352
margin_right = 191.847
margin_bottom = 94.4352
custom_fonts/font = SubResource( 2 )
text = "Enemy"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.9274
margin_top = 87.9668
margin_right = 35.0726
margin_bottom = 127.967
custom_fonts/font = SubResource( 3 )
text = "is"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = 129.507
margin_right = 98.0
margin_bottom = 194.507
custom_fonts/font = SubResource( 4 )
text = "You"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = 243.0
margin_right = 115.0
margin_bottom = -226.0
custom_fonts/font = SubResource( 5 )
text = "Start"

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.0
margin_top = 427.0
margin_right = 116.0
margin_bottom = -41.9998
custom_fonts/font = SubResource( 5 )
text = "Exit"

[node name="Button3" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = 335.0
margin_right = 115.0
margin_bottom = -134.0
custom_fonts/font = SubResource( 5 )
text = "Level"
[connection signal="pressed" from="Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_level_pressed"]
